# ocira

./: .clang-format  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/src/: main.cpp
Core/: CMakeLists.txt
Core/include/: bus.hpp  circuit.hpp  circuit_calculator.hpp  circuit_enums.hpp  circuit_structs.hpp  circuit_transformer.hpp  circuit_validator.hpp  component.hpp  dc_current_source.hpp  ground.hpp  node.hpp  resistor.hpp  wire.hpp
Core/include/components/: ac_current_source.hpp  ac_voltage_source.hpp  bus.hpp  capacitor.hpp  component.hpp  dc_current_source.hpp  dc_voltage_source.hpp  ground.hpp  inductor.hpp  resistor.hpp  wire.hpp
Core/include/managers/: connection_manager.hpp
Core/src/: bus.cpp  circuit.cpp  circuit_calculator.cpp  circuit_transformer.cpp  circuit_validator.cpp  component.cpp  dc_current_source.cpp  ground.cpp  node.cpp  resistor.cpp  wire.cpp
Core/src/components/: ac_current_source.cpp  ac_voltage_source.cpp  bus.cpp  capacitor.cpp  component.cpp  dc_current_source.cpp  dc_voltage_source.cpp  ground.cpp  inductor.cpp  resistor.cpp  wire.cpp
Core/src/managers/: connection_manager.cpp
Core/test/: test_bus.cpp  test_circuit.cpp  test_circuit_calculator.cpp  test_circuit_transformer.cpp  test_circuit_validator.cpp  test_component.cpp  test_dc_current_source.cpp  test_ground.cpp  test_node.cpp  test_resistor.cpp  test_wire.cpp
Core/test/components/: test_ac_current_source.cpp  test_ac_voltage_source.cpp  test_bus.cpp  test_capacitor.cpp  test_component.cpp  test_dc_current_source.cpp  test_dc_voltage_source.cpp  test_ground.cpp  test_inductor.cpp  test_resistor.cpp  test_wire.cpp
Core/test/helpers/include/: example_circuit_generator.hpp
Core/test/helpers/src/: example_circuit_generator.cpp
Core/test/managers/: test_connection_manager.cpp
Core/test/utils/include/: example_circuit_generator.hpp
Core/test/utils/src/: example_circuit_generator.cpp
